[package]
name = "pso2_rainbow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
itertools = "0.10.5"

[[bin]]
name = "pso2_rainbow"

[lib]